--- a/README.Rmd
+++ b/README.Rmd
@@ -43,16 +43,7 @@ tilt_landscape_2 <- tilt_map(landscape_2, x_shift = 50, y_shift = 50)
 tilt_landscape_3 <- tilt_map(landscape_3, x_shift = 100, y_shift = 100)
 tilt_landscape_points <- tilt_map(landscape_points, x_shift = 150, y_shift = 150)
 
-ggplot() +
-  geom_sf(data = tilt_landscape_1,
-          aes(fill = layer), color = NA) +
-  geom_sf(data = tilt_landscape_2,
-          aes(fill = layer), color = NA) +
-  geom_sf(data = tilt_landscape_3,
-          aes(fill = layer), color = NA) +
-  geom_sf(data = tilt_landscape_points,
-          color = "red") +
-  scale_fill_scico(palette = 'davos') +
-  theme(legend.position = "none") +
-  theme_void()
+map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_points)
+
+plot_tiltedmaps(map_list, c("layer", "layer", "layer", NA))
 ```
