--- a/README.Rmd
+++ b/README.Rmd
@@ -35,8 +35,6 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example, messages = FALSE}
 library(layer)
-library(ggplot2)
-library(scico)
 
 tilt_landscape_1 <- tilt_map(landscape_1)
 tilt_landscape_2 <- tilt_map(landscape_2, x_shift = 50, y_shift = 50)
@@ -45,5 +43,7 @@ tilt_landscape_points <- tilt_map(landscape_points, x_shift = 150, y_shift = 150
 
 map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_points)
 
-plot_tiltedmaps(map_list, c("layer", "layer", "layer", NA))
+plot_tiltedmaps(map_list, 
+                c("layer", "layer", "layer", NA), 
+                palette = c("bilbao", "mako", "rocket", "plasma"))
 ```
