--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,26 @@ tilt_landscape_points <- tilt_map(landscape_points, x_shift = 150, y_shift = 150
 map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_points)
 
 plot_tiltedmaps(map_list, 
-                c("layer", "layer", "layer", NA), 
-                palette = c("bilbao", "mako", "rocket", NA),
+                layer = c("value", "value", "value", NA),
+                palette = c("bilbao", "mako", "rocket", "turbo"),
                 color = "grey40")
+```
+
+### More advanced examples
+
+Some more realistic looking data (DEM, drought and precipitation for continental USA): 
+
+```{r messages = FALSE, eval= FALSE}
+tilt_landscape_1 <- tilt_map(dem_usa)
+tilt_landscape_2 <- tilt_map(drought_usa, x_shift = 0, y_shift = 25)
+tilt_landscape_3 <- tilt_map(prec_usa, x_shift = 0, y_shift = 50)
+
+map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3)
+
+plot_tiltedmaps(map_list, palette =c("tofino", "rocket", "mako"), direction = c(-1, 1, 1)) 
+```
+
+
+```{r echo=FALSE}
+knitr::include_graphics(rep("./man/figures/README-figure-real.png"))
 ```
