--- a/README.Rmd
+++ b/README.Rmd
@@ -4,16 +4,20 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
+```{r opts, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
+  warning = TRUE,
+  message = TRUE,
+  width = 120,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.retina = 2,
+  fig.path = "README-"
 )
 ```
 
-# layer
+
+# layer <a><img src='man/figures/logo.svg' align="right" height=210 width=182/></a>
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -54,13 +58,14 @@ plot_tiltedmaps(map_list,
 Some more realistic looking data (DEM, drought and precipitation for continental USA): 
 
 ```{r messages = FALSE, eval= FALSE}
-tilt_landscape_1 <- tilt_map(dem_usa)
-tilt_landscape_2 <- tilt_map(drought_usa, x_shift = 0, y_shift = 25)
-tilt_landscape_3 <- tilt_map(prec_usa, x_shift = 0, y_shift = 50)
+tilt_landscape_1 <- tilt_map(dem_usa, y_tilt = 3)
+tilt_landscape_2 <- tilt_map(drought_usa, y_tilt = 3, x_shift = 15, y_shift = 25)
+tilt_landscape_3 <- tilt_map(prec_usa,y_tilt = 3,  x_shift = 30, y_shift = 50)
+tilt_landscape_4 <- tilt_map(fire_usa,y_tilt = 3, x_shift = 45, y_shift = 65)
 
-map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3)
+map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_4)
 
-plot_tiltedmaps(map_list, palette =c("tofino", "rocket", "mako"), direction = c(-1, 1, 1)) 
+plot_tiltedmaps(map_list, palette =c("tofino", "rocket", "mako", "magma"), direction = c(-1, 1, 1, 1)) 
 ```
 
 
