--- a/README.Rmd
+++ b/README.Rmd
@@ -53,15 +53,15 @@ This is a basic example which shows you how to solve a common problem:
 library(layer)
 
 tilt_landscape_1 <- tilt_map(landscape_1)
-tilt_landscape_2 <- tilt_map(landscape_2, x_shift = 50, y_shift = 50)
-tilt_landscape_3 <- tilt_map(landscape_3, x_shift = 100, y_shift = 100)
-tilt_landscape_points <- tilt_map(landscape_points, x_shift = 150, y_shift = 150)
+tilt_landscape_2 <- tilt_map(landscape_2, x_shift = 25, y_shift = 50)
+tilt_landscape_3 <- tilt_map(landscape_3, x_shift = 50, y_shift = 100)
+tilt_landscape_points <- tilt_map(landscape_points, x_shift = 75, y_shift = 150)
 
 map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_points)
 
 plot_tiltedmaps(map_list, 
                 layer = c("value", "value", "value", NA),
-                palette = c("bilbao", "mako", "rocket", "turbo"),
+                palette = c("bilbao", "mako", "rocket", NA),
                 color = "grey40")
 ```
 
