--- a/README.Rmd
+++ b/README.Rmd
@@ -59,25 +59,25 @@ tilt_landscape_points <- tilt_map(landscape_points, x_shift = 75, y_shift = 150)
 
 map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_points)
 
-plot_tiltedmaps(map_list, 
+plot_tiltedmaps(map_list,
                 layer = c("value", "value", "value", NA),
                 palette = c("bilbao", "mako", "rocket", NA),
                 color = "grey40")
 ```
 
-### More advanced examples
+### More advanced example
 
 Some more realistic looking data (DEM, drought, precipitation, and wildfires for continental USA): 
 
 ```{r adv-example, eval = !file.exists("man/figures/README-adv-example.png"), fig.alt = "Advanced example of a stacked tilted map"}
 tilt_landscape_1 <- tilt_map(dem_usa, y_tilt = 3)
 tilt_landscape_2 <- tilt_map(drought_usa, y_tilt = 3, x_shift = 15, y_shift = 25)
-tilt_landscape_3 <- tilt_map(prec_usa,y_tilt = 3,  x_shift = 30, y_shift = 50)
-tilt_landscape_4 <- tilt_map(fire_usa,y_tilt = 3, x_shift = 45, y_shift = 65)
+tilt_landscape_3 <- tilt_map(prec_usa, y_tilt = 3, x_shift = 30, y_shift = 50)
+tilt_landscape_4 <- tilt_map(fire_usa, y_tilt = 3, x_shift = 45, y_shift = 65)
 
 map_list <- list(tilt_landscape_1, tilt_landscape_2, tilt_landscape_3, tilt_landscape_4)
 
-plot_tiltedmaps(map_list, palette =c("tofino", "rocket", "mako", "magma"), direction = c(-1, 1, 1, 1)) 
+plot_tiltedmaps(map_list, palette = c("tofino", "rocket", "mako", "magma"), direction = c(-1, 1, 1, 1))
 ```
 
 ```{r, echo = FALSE, fig.alt = "Advanced example of a stacked tilted map"}
@@ -86,4 +86,5 @@ knitr::include_graphics("man/figures/README-adv-example.png")
 
 ## Code of Conduct
 
-Please note that the `layer` project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+Please note that the `layer` project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/0/CODE_OF_CONDUCT.html).
+By contributing to this project, you agree to abide by its terms.
