fix: set fig.path to man/figures

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
   width = 120,
   comment = "#>",
   fig.retina = 2,
-  fig.path = "README-"
+  fig.path = "man/figures/README-"
 )
 ```
 
