fix: add alt text

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,8 +32,8 @@ layers for a geographical region. Tilting maps and layering them allows to easil
 
 Something in the line of:
 
-```{r echo=FALSE}
-knitr::include_graphics(rep("./man/figures/example.jpg_large"))
+```{r, echo = FALSE, fig.alt = "Example of a stacked tilted map by Cédric Scherer and Marco Sciaini"}
+knitr::include_graphics("man/figures/example.jpg_large")
 ```
 
 ## Installation
