--- a/README.qmd
+++ b/README.qmd
@@ -1,8 +1,8 @@
 ---
-output: github_document
+format: gfm
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- README.md is generated from README.qmd. Please edit that file -->
 
 ```{r opts, echo = FALSE}
 knitr::opts_chunk$set(
