--- a/README.qmd
+++ b/README.qmd
@@ -1,5 +1,6 @@
 ---
 format: gfm
+default-image-extension: ""
 ---
 
 <!-- README.md is generated from README.qmd. Please edit that file -->
@@ -20,11 +21,15 @@ knitr::opts_chunk$set(
 # layer <a><img src='man/figures/logo.svg' align="right" height=210 width=182/></a>
 
 <!-- badges: start -->
-[![R build
-status](https://github.com/marcosci/layer/workflows/R-CMD-check/badge.svg)](https://github.com/marcosci/layer/actions?query=workflow%3AR-CMD-check)
+
 [![Project Status: Active](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/layer)](https://cran.r-project.org/package=layer)
-[![CRAN Downloads](https://cranlogs.r-pkg.org/badges/grand-total/layer?color=orange)](https://cran.r-project.org/package=layer)
+[![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable){target="_blank"} [![CRAN status](https://www.r-pkg.org/badges/version/layer)](https://CRAN.R-project.org/package=layer){target="_blank"}
+[![CRAN/METACRAN Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/layer?color=blue)](https://CRAN.R-project.org/package=layer){target="_blank"}
+[![CRAN/METACRAN Downloads per month](https://cranlogs.r-pkg.org/badges/layer?color=blue)](https://CRAN.R-project.org/package=layer){target="_blank"}
+[![R-CMD-check](https://github.com/marcosci/layer/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/marcosci/layer/actions/workflows/R-CMD-check.yaml)
+
+[![DOI](https://zenodo.org/badge/DOI/10.32614/CRAN.package.layer.svg)](https://doi.org/10.32614/CRAN.package.layer)
+
 <!-- badges: end -->
 
 The goal of `layer` is to simplify the whole process of creating stacked tilted maps, that are often used in scientific publications to show different environmental
